2009-08-02  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libfortran/40853
	* io/list_read.c (nml_get_obj_data): Do not set nl
	pointer to first_nl if nl->next is NULL.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@150356 138bc75d-0d04-0410-961f-82ee72b054a4